2005-03-07  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: oops, forgot to commit.

2005-03-07  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in:
	* NEWS: Released 2.10.0.

2005-03-06  Benoît Dejean  <TazForEver@dlfp.org>

	* gnome-system-monitor.spec: Updated.

2005-02-28  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: Released 2.9.92.

2005-02-25  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: /me stupid. I've already post-bumped version.

2005-02-24  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: post release bump 2.9.93.

2005-02-16  Benoît Dejean  <TazForEver@dlfp.org>

	* src/defaulttable.h:
	* src/prettytable.c: (new_application), (application_finished),
	(pretty_table_new), (pretty_table_get_icon), (pretty_table_free),
	(create_scaled_icon), (load_icon_for_commands), (cb_g_free),
	(cb_g_ptr_array_free), (load_default_table):
	* src/prettytable.h:
	* src/procman.h: Reworked so that icons loaded from the default table
	share their pixbuf.
	
	* src/procdialogs.c: (procdialog_create_hide_dialog):
	* src/procdialogs.h: Removed dead code.

2005-02-08  Hongli Lai  <h.lai@chello.nl>

	* configure.in, src/Makefile.am:
	  Removed hard dependancy on libgnomesu.
	* src/procdialogs.c (procdialog_create_root_password_dialog):
	  Detect libgnomesu at runtime using GModule.

2005-02-07  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: 2.9.92.
	
	* configure.in:
	* src/Makefile.am:
	* src/procdialogs.c: (procdialog_create_root_password_dialog):
	Conditionnaly enable libgnomesu support. Closes #164244

2005-02-06  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in: Released 2.9.91.

2005-01-30  Benoît Dejean  <TazForEver@dlfp.org>

	* po/fr.po:
	* src/openfiles.c: (create_single_openfiles_dialog): Better title.

2005-01-24  Duarte Loreto <happyguy_pt@hotmail.com>

	* src/gnome-system-monitor.schemas.in: Fixed a typo 
	  (waring -> warning)

2005-01-24  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in: Released 2.9.90.
