@@ -540,12 +540,12 @@ create_sys_view (ProcData *procdata)
 
 	model = gtk_tree_store_new (10,
 				    GDK_TYPE_PIXBUF,
-				    G_TYPE_STRING, // device name
-				    G_TYPE_STRING, // directory
-				    G_TYPE_STRING, // type
-				    G_TYPE_STRING, // total
-				    G_TYPE_STRING, // free
-				    G_TYPE_STRING, // used
+				    G_TYPE_STRING, /* device name */
+				    G_TYPE_STRING, /* directory */
+				    G_TYPE_STRING, /* type */
+				    G_TYPE_STRING, /* total */
+				    G_TYPE_STRING, /* free */
+				    G_TYPE_STRING, /* used */
 				    G_TYPE_FLOAT,
 				    G_TYPE_FLOAT,
 				    G_TYPE_FLOAT);
