@@ -1,3 +1,9 @@
+2005-03-14  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/interface.c: (create_sys_view):
+	* src/openfiles.c: (compare_open_files): don't use C++-style comments.
+	Patch by jensgr@gmx.net (Jens Granseuer).
+
 2005-03-07  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* NEWS: oops, forgot to commit.
